Finish landing page styling mockup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="button">Sign up</button>
             </div>
             <div class="text hero-img">
-                This is a placeholder for an image
+                this is a placeholder for an image
             </div>
         </div>
     </section>
@@ -52,14 +52,22 @@
     </section>
 
     <section class="section-quote">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="quote-author">-Thor, God of Thunder</p>
+        <div class="container-quote">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
     </section>
 
     <section class="section-signup">
-        <strong>Call to action! It's time!</strong>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button class="button-signup">Sign up</button>
+        <div class="container-signup">
+            <div class="text-signup">
+                <strong>Call to action! It's time!</strong>
+                <p class="text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button class="button button-signup">Sign up</button>
+            </div>
+        </div>
     </section>
 
     <footer>
