--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="button">Sign up</button>
             </div>
-            <div class="text hero-img">
-                this is a placeholder for an image
-            </div>
+            <div class="text hero-img"></div>
         </div>
     </section>
 
@@ -33,19 +31,19 @@
 
         <div class="container-info">
             <div class="info">
-                <img src="https://images.unsplash.com/photo-1768144931674-d5f5dad44f2a?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+                <img src="https://plus.unsplash.com/premium_photo-1661878091370-4ccb8763756a?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
                 <p class="text">this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
-                <img src="https://images.unsplash.com/photo-1768137580595-eed74788aebb?q=80&w=1175&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+                <img src="https://images.unsplash.com/photo-1601823984263-b87b59798b70?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
                 <p class="text">this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
-                <img src="https://images.unsplash.com/photo-1767976517582-9283a1cc25e9?q=80&w=685&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+                <img src="https://images.unsplash.com/photo-1524413840807-0c3cb6fa808d?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
                 <p class="text">this is some subtext under an illustration or image</p>
             </div>
             <div class="info">
-                <img src="https://images.unsplash.com/photo-1767976517412-56f6d079a99f?q=80&w=1175&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+                <img src="https://plus.unsplash.com/premium_photo-1666700698920-d2d2bba589f8?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
                 <p class="text">this is some subtext under an illustration or image</p>
             </div>
         </div>
